<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="shared_user_label">ZeroTermux user</string>
    <string name="app_name">Paseo Enhanced</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.\nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed under any path other than %1$s.</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="action_repair_mode">Repair Mode</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="error_display_over_other_apps_permission_not_granted">&TERMUX_APP_NAME; requires \"Display over other apps\" permission to start terminal sessions from background on Android >= 10. Grants it from Settings -> Apps -> &TERMUX_APP_NAME; -> Advanced</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_allow_external_apps_ungranted">RunCommandService requires `allow-external-apps` property to be set to `true` in `&TERMUX_PROPERTIES_PRIMARY_PATH_SHORT;` file.</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="许可证">Legal Notices:\n




       " ZeroTermux is a non-profit software developed based on Termux\n\nPart of the copyright belongs to ZeroTermux\n\nNo responsibility for any legal issues and risks, and no commercial purpose\n\n\n
        Do not use for illegal purposes! \n
        \n
        Please abide by the law and be a good citizen,\n
        \n
        The original intention of ZeroTermux is to let you enter the linux world faster, contribute a spirit to the construction of society in the future, and make a contribution\n
        \n

        After a certain level of use, it is strongly recommended that you transition to the official termux [start using after getting started] (recommended),\n
        \n

        After all, ZT can help you for a while, but it can't help you for the rest of your life!\n
        \n


       Note: [Delete function may empty your SD card] in the [Switch system] function\n
        \n
        Please turn off the sd card authorization to execute the [Delete] function\n
        \n
        If your operation (not limited to the [Delete Function] of [Switch System], here is all the functions of ZeroTermux), your SD card includes:\n
        \n
        Photo\n
        Video\n
        Audio\n
        As well as all other data, you (the personal user of ZeroTermux (ZT)) are responsible for yourself\n
        \n


       The download source of the public warehouse is uncontrollable and is not under the control of ZeroTermux. It all comes from a third-party warehouse. ZeroTermux and the author will not be responsible for everything from the third-party warehouse!\n
\n
        \n
        If the third-party warehouse has all illegal activities/documents, the author who provides the third-party warehouse bears any legal responsibility! ZeroTermux and the author do not bear any legal/other responsibilities!

        \n
        \n
        License:\n
        \n

        All functions of ZeroTermux can only be used for personal learning and communication, not for commercial use! and illegal use!\n
        \n
        All functions of ZeroTermux can only be used for personal learning and communication, not for commercial use! and illegal use!\n\n
        All functions of ZeroTermux can only be used for personal learning and communication, not for commercial use! and illegal use!\n\n

        1. This software (ZeroTermux) is open source software, you can freely distribute, copy, and change, but please follow the GPL agreement!\n\n
        2. The software follows the GPL agreement (http://www.opensource.org/licenses/gpl-2.0.php)\n\n
        3. All the functions of this software (ZeroTermux) are for learning and communication use, do not use commercially, such as accidental operations, intentional operations, unintentional operations, etc. of the user (users who use ZeroTermux) are borne by the user!\n
        4. This software (ZeroTermux) is used for free learning and communication as in the first regulation. The icons and fonts involved in the software are all from the Internet. \n
         4.1. The font is the Android default font. If you use other fonts, please users (users using ZeroTermux) bear all risks and legal responsibilities. \n
         4.2. The icon is used as the public library of Alibaba ICO. The principle of using the icon is for learning and communication, not for commercial use. If there is any infringement, it will be deleted immediately. \n
        5. The recovery packages, data packages, zip packages, etc. used in this software (ZeroTermux) are all at risk. All of them are from the Internet. Please use it at your discretion. If any irreparable loss is caused, the user shall bear the risk. . \n
        6. All recovery packages, data packages,module packages, and zip packages ZeroTermux cannot control their content. If there is any infringement in the package, the author of this software does not bear any responsibility, and the creator of the recovery package, data package, and zip package shall bear the responsibility (tar.gz backup function law statement). \n
        7. Thanks to all the authors of the functions applied to this project. \n
        8.Using ZeroTermux will directly or indirectly damage your equipment. If there is any irreparable loss, the user shall bear the responsibility of the software and the author.\n"


    </string>
    <string name="不同意">disagree</string>
    <string name="同意">agree</string>
    <string name="ai_provider_edit">Edit Provider</string>
    <string name="ai_provider_name">Name</string>
    <string name="ai_provider_name_hint">e.g., DeepSeek, OpenAI</string>
    <string name="ai_provider_format">API Format</string>
    <string name="ai_provider_url">API URL</string>
    <string name="ai_provider_url_hint">https://api.example.com/v1/chat/completions</string>
    <string name="ai_provider_key">API Key</string>
    <string name="ai_provider_key_hint">Enter your API key</string>
    <string name="ai_provider_model">Model Name</string>
    <string name="ai_provider_model_hint">e.g., deepseek-chat, gpt-4o</string>
    <string name="ai_provider_set_default">Set as default</string>
    <string name="ai_delete">Delete</string>
    <string name="guide_zerotermux_create_folder_summary"> "ZeroTermux needs to create the following folders in your internal storage\n\n
        If you don't understand, simply tap "Continue"\n\n
        Note:\n
        Currently unsupported data pages:\n
        1. Windows Emulation\n
        1.1 If you want to use Windows emulation features, you can only create the internal storage/xinhao/windows folder on the SD card\n
        1.2 If you do not want to create the relevant folders in internal storage, you can choose not to use this module feature (Left main menu → QEMU → Zero/UTermux Emulation)\n
        2. Module Installation\n
        2.1 If you want to use module-related features, you can only create the internal storage/xinhao/module folder on the SD card\n
        2.2 If you do not want to create the relevant folders in internal storage, you can choose not to use this module feature (Left main menu → Module Installation)\n
        \n\n
        Suggestion: Under normal circumstances, please place it in internal storage. If placed in the Android/data directory, all saved data packages and all data under the xinhao folder will be cleared after uninstalling the app. Please choose carefully.\n\n
        Note: Placing files in internal storage/Android/data may cause unknown issues. If you encounter any, please provide feedback on GitHub.\n
        Android standard (/internal storage/Android/data/com.termux/files/xinhao/)\n
        Simple and easy (/internal storage/xinhao)\n\n
        Directory descriptions: data (backup packages), apk (temporary APKs), windows (QEMU directory),
        command (command directory), font (font directory), iso (image directory), mysql (MySQL temporary files),
        online_system (offline Termux packages), qemu (QEMU directory), server (server directory), share (share directory), web_config (web temporary directory)\n\n
        If you need to change the directory later, you can modify it in ZeroTermux settings. Please note: the data in the two directories are displayed separately."
    </string>
    <string name="guide_zerotermux_create_sdcard">Internal Storage</string>
    <string name="guide_zerotermux_create_android">Internal Storage/Android/data</string>
</resources>