<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="@color/color_55000000"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/provider_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/provider_item_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/md_grey_500"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/provider_item_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/ai_provider_set_default"
                android:textColor="#4CAF50"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/provider_item_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/ai_provider_edit"
                android:textColor="@color/color_48baf3"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/provider_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:padding="6dp"
                android:text="@string/ai_delete"
                android:textColor="#FF6B6B"
                android:textSize="13sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
