<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2b2b2b"
    tools:context=".zerocore.settings.ZtSettingsActivity">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_above="@+id/boom_btn_layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:layout_height="130dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardElevation="0dp"
                    android:id="@+id/sdcard"
                    app:cardBackgroundColor="@color/color_55000000"
                    app:cardCornerRadius="6dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="45dp"
                            android:src="@mipmap/start_activity_ico"
                            android:layout_height="55dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:text="@string/guide_zerotermux_create_sdcard"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:layout_height="130dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/color_55000000"
                    app:cardCornerRadius="6dp"
                    android:id="@+id/sdcard_android"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="45dp"
                            android:src="@mipmap/start_activity_ico"
                            android:layout_height="55dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textSize="13sp"
                            android:text="@string/guide_zerotermux_create_android"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/color_55000000"
            app:cardCornerRadius="6dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@mipmap/waring"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_ffffff"
                    android:textSize="15sp"
                    android:text="@string/guide_zerotermux_create_folder_summary"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="3dp"
        android:id="@+id/boom_btn_layout"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardElevation="0dp"
            android:id="@+id/previous"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/color_55000000"
            app:cardCornerRadius="6dp"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp">
                <TextView
                    android:id="@+id/previous_tv"
                    android:layout_width="wrap_content"
                    android:textColor="@color/color_ffffff"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/不同意"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardElevation="0dp"
            android:layout_marginLeft="6dp"
            android:id="@+id/next"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/color_55000000"
            app:cardCornerRadius="6dp"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/color_ffffff"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/next_tv"
                    android:text="@string/同意"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>
